# blacklitterman-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tickers.csv
src/bl_optimizer/cli/: app.py
src/bl_optimizer/cli/commands/: backtest.py  run.py  validate.py
src/bl_optimizer/config/: settings.py
src/bl_optimizer/data/: fetcher.py  models.py  validator.py
src/bl_optimizer/features/: engineer.py
src/bl_optimizer/optimization/: optimizer.py
src/bl_optimizer/reporting/: reporter.py
src/bl_optimizer/views/: base_model.py  linear_regression.py  random_forest.py  view_builder.py
