[project]
name = "bl-optimizer"
version = "0.1.0"
description = "Black-Litterman portfolio optimization with ML-generated views"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "yfinance>=0.2.40",
    "skfolio>=0.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
bl-optimize = "bl_optimizer.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pandas-stubs>=2.2.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true
